Updated URL links

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="nav-logo">
+            <a href="https://www.mythicborngames.com" class="nav-logo">
                 <img src="images/mythicborn_logo_notext.png" alt="Mythicborn Games">
             </a>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="https://www.mythicborngames.com">Home</a></li>
                 <li><a href="index.html">Poultry Pop</a></li>
             </ul>
         </nav>
@@ -124,7 +124,7 @@
         </section>
 
         <section class="back-section">
-            <a href="#" class="back-link">Back to Mythicborn Games</a>
+            <a href="https://www.mythicborngames.com" class="back-link">Back to Mythicborn Games</a>
         </section>
     </main>
 
